--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta property="og:title" content="I coded a game with Zuitt!" />
     <meta property="og:description" content="This Game Development project is powered by Zuitt Coding Bootcamp" />
     <meta property="og:site_name" content="I coded a game with Zuitt!" />
-    <meta property="og:image" content="./images/story-thumbnail-2048.jpg" />
+    <meta property="og:image" content="https://ceedoroteo.github.io/doroteo-2048/images/story-thumbnail-2048.jpg" />
     <meta property="og:image:secure_url" content="[YOUR-LINK]" />
 
 	<title>2048</title>
@@ -28,7 +28,7 @@
 		<div class="share-button-container">
 			<div class="share-label">Share:</div>
 			<div class="share-icons">
-				<a href="https://www.facebook.com/sharer/sharer.php?u=https://cgarcia-zuitt.github.io/js-game-fcb/" target="_blank">
+				<a href="https://www.facebook.com/sharer/sharer.php?u=https://ceedoroteo.github.io/doroteo-2048/" target="_blank">
 				<img src="./images/share_2048-fb.svg"/>
 				</a>
 				</a>
